# Simple-Player-Based-on-FFmpeg

./: CMakeLists.txt  README.md
build-wsl/: CMakeCache.txt  Makefile  cmake_install.cmake  sim_player
include/player/: BlockingQueue.h  Clock.h  Decoder.h  Demuxer.h  FfmpegUtils.h  Player.h  Renderer.h
src/: Decoder.cpp  Demuxer.cpp  Player.cpp  Renderer.cpp  RendererSDL.cpp  main.cpp
